Sutter Health/src/objects/Member_Enquiries__c.object
<CustomObject>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Inquiries By Others</relationshipLabel>
        <relationshipName>Member_Enquiries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intent__c</fullName>
        <label>Intent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accumulators</fullName>
                </value>
                <value>
                    <fullName>Authorizations</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Opened in Error</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Prescriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member/Provider Id</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>Member</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>SHP Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Inquiries By Others</relationshipLabel>
        <relationshipName>Member_Enquiries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Provider_Name_Formula__c</fullName>
        <formula>IF(Member_Id__r.RecordType.Name == &apos;SHP Provider&apos;, 
&quot;Provider&quot; + &quot; {&quot; + Member_Id__r.Supplier_NPI__c + &quot;, &quot;  +  Member_Provider_Name__c + &quot;} &quot; + &quot;Inquired by a &quot; +  Queried_By_Formula__c ,
 Member_Id__r.RecordType.Name + &quot; {&quot; + Member_Id__r.Member_ID__c + &quot;, &quot;  +  Member_Provider_Name__c + &quot;} &quot; + &quot;Inquired by a &quot; +Queried_By_Formula__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member/Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Provider_Name__c</fullName>
        <formula>Member_Id__r.FirstName +&apos; &apos; +   Member_Id__r.Middle_Name__c  +&apos; &apos;+  Member_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member/Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queried_By_Formula__c</fullName>
        <formula>If(Case__r.Contact.RecordType.Name == &apos;SHP Provider&apos;, &quot;Provider&quot; + &quot; {&quot; + Case__r.Contact.Supplier_NPI__c + &quot;, &quot;  +  Case__r.Contact.FirstName +&apos; &apos; + Case__r.Contact.Middle_Name__c +&apos; &apos;+ Case__r.Contact.LastName + &quot;} &quot; ,If(Case__r.Contact.RecordType.Name == &apos;Member&apos; , &quot;Member&quot; + &quot; {&quot; + Case__r.Contact.Member_ID__c  + &quot;, &quot;  +  Case__r.Contact.FirstName +&apos; &apos; + Case__r.Contact.Middle_Name__c +&apos; &apos;+ Case__r.Contact.LastName + &quot;} &quot;,If((Case__r.Contact.RecordType.Name == &apos;SHP Sales Broker Contact&apos; || Case__r.Contact.RecordType.Name == &apos;SHP Sales Broker Contact Read Only&apos;) , &quot;Broker&quot; + &quot; {&quot; + Case__r.Contact.Broker_Agent_HCC_ID__c + &quot;, &quot;  +  Case__r.Contact.FirstName +&apos; &apos; + Case__r.Contact.Middle_Name__c +&apos; &apos;+ Case__r.Contact.LastName + &quot;} &quot;, If((Case__r.Contact.RecordType.Name == &apos;SHP Sales Employer Contact&apos; || Case__r.Contact.RecordType.Name == &apos;SHP Sales Employer Contact Read Only&apos;), &quot;Employer&quot; + &quot; {&quot; + Case__r.Contact.Employer_Contact_HCC_ID__c + &quot;, &quot;  +  Case__r.Contact.FirstName +&apos; &apos; + Case__r.Contact.Middle_Name__c +&apos; &apos;+ Case__r.Contact.LastName + &quot;} &quot;,&apos; &apos;  ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queried By Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queried_By__c</fullName>
        <formula>If(Case__r.Contact.RecordType.Name == &apos;SHP Provider&apos;, &apos;Provider&apos; ,If(Case__r.Contact.RecordType.Name == &apos;Member&apos; , &quot;Member&quot;, If((Case__r.Contact.RecordType.Name == &apos;SHP Sales Broker Contact&apos; || Case__r.Contact.RecordType.Name == &apos;SHP Sales Broker Contact Read Only&apos;) , &quot;Broker&quot; , If((Case__r.Contact.RecordType.Name == &apos;SHP Sales Employer Contact&apos; || Case__r.Contact.RecordType.Name == &apos;SHP Sales Employer Contact Read Only&apos;), &quot;Employer&quot;,&quot; &quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queried By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Case__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Customer Inquiries By Others</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Member Inquiries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiries By Others</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>